# otuscpp-hw-1

./: CMakeLists.txt  Versioning.txt  main.cpp  version.cpp  version.cpp.in
.github/workflows/: cmake.yml
Releases/: helloworld_1.1.41_amd64.deb  helloworld_1.1.52_amd64.deb  helloworld_1.1.53_amd64.deb  helloworld_1.1.55_amd64.deb  helloworld_1.1.56_amd64.deb  helloworld_1.1.57_amd64.deb  helloworld_1.1.61_amd64.deb  helloworld_1.1.62_amd64.deb  helloworld_1.1.63_amd64.deb  helloworld_1.1.64_amd64.deb  helloworld_1.1.65_amd64.deb  helloworld_1.1.66_amd64.deb  helloworld_1.1.67_amd64.deb  helloworld_1.1.68_amd64.deb  helloworld_1.1.69_amd64.deb  helloworld_1.1.70_amd64.deb  helloworld_1.1.71_amd64.deb  helloworld_1.1.72_amd64.deb  helloworld_1.1.73_amd64.deb
